--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,9 @@
 #
 # RELEASE_NOTES
 #
+R1.5.3  2017-05-03 Hugo Slepicka
+    Updated ADCore to R2.6-2.1.0
+
 R1.5.2	2017-04-22 Bruce Hill
 	Updated build support for git workflow
 	Updated modules to 
