--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,9 @@
 #
 # RELEASE_NOTES
 #
+R1.5.4  2017-05-17 Hugo Slepicka
+    Updated ADCore to R2.6-2.1.3 and asyn to R4.31-1.0.0
+
 R1.5.3  2017-05-03 Hugo Slepicka
     Updated ADCore to R2.6-2.1.0
 
