--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,9 @@
 #
 # RELEASE_NOTES
 #
+R1.5.8	2017-11-13
+	Updated ADCore/R2.6-2.4.0
+
 R1.5.7	2017-10-26
 	Updated ADCore/R2.6-2.3.0, diagTimer/R1.9.1, event2/R4.2.4
 
