--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,9 @@
 #
 # RELEASE_NOTES
 #
+R1.5.12	2018-3-29
+	Updated to ADCore/R3.1-2.1.1
+
 R1.5.11	2018-3-19
 	Updated to ADCore/R3.1-2.1.0 for qsrv fix
 
