--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,9 @@
 #
 # RELEASE_NOTES
 #
+R1.6.2	2018-12-18 Bruce Hill
+	Update to event2/R4.6.0
+
 R1.6.1	2018-12-18 Bruce Hill
 	Update to event2/R4.5.0 and ADCore/R3.1-2.3.0
 
