R1.7.1: Update to ADCore/R3.1-2.3.3

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,9 @@
 #
 # RELEASE_NOTES
 #
+R1.7.1	2019-06-12 Bruce Hill
+	Update to ADCore/R3.1-2.3.3
+
 R1.7.0	2019-02-08 Bruce Hill
 	Make TOD use epicsTimeGetCurrent() instead of evrTimeGet().
 
