--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,9 @@
 #
 # RELEASE_NOTES
 #
+R1.7.2	2020-03-03 Bruce Hill
+	Update to ADCore/R3.1-2.3.4
+
 R1.7.1	2019-06-12 Bruce Hill
 	Update to ADCore/R3.1-2.3.3
 
