--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,9 @@
 #
 # RELEASE_NOTES
 #
+R1.7.3	2020-08-25 Bruce Hill
+	Create version w/ ADCore/R3.1-2.3.1 and asyn/R4.31-0.1.0
+
 R1.7.2	2020-03-03 Bruce Hill
 	Update to ADCore/R3.1-2.3.4
 
