--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,10 @@
 #
 # RELEASE_NOTES
 #
+R1.8.0 2020-10-14 Bruce Hill
+	Modified sync test to be proportional to expected delay.
+	Update to ADCore/R3.1-2.3.5 asyn/R4.32-1.0.0
+
 R1.7.3	2020-08-25 Bruce Hill
 	Create version w/ ADCore/R3.1-2.3.1 and asyn/R4.31-0.1.0
 
