--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,10 @@
 #
 # RELEASE_NOTES
 #
+R1.8.2 2021-09-29 Bruce Hill
+	Update to ADCore/R3.9-1.0.2
+	Updating timeStampFifo to use timingApi
+
 R1.8.1 2020-10-15 Bruce Hill
 	Added new PVs: ActualDelayMin and ActualDelayMax.
 
