--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,9 @@
 #
 # RELEASE_NOTES
 #
+R1.8.3	2022-01-28 Bruce Hill
+	Update to ADCore/R3.9-1.0.3 asyn/R4.39-1.0.1
+
 R1.8.2 2021-09-29 Bruce Hill
 	Update to ADCore/R3.9-1.0.2
 	Updating timeStampFifo to use timingApi
