--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,9 @@
 #
 # RELEASE_NOTES
 #
+R1.8.4	2022-02-09 Bruce Hill
+	Update to ADCore/R3.9-1.1.0
+
 R1.8.3	2022-01-28 Bruce Hill
 	Update to ADCore/R3.9-1.0.3 asyn/R4.39-1.0.1
 
