--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,9 @@
 #
 # RELEASE_NOTES
 #
+R1.8.5	2022-06-01 Bruce Hill
+	Update to event2/R4.6.0
+
 R1.8.4	2022-02-09 Bruce Hill
 	Update to ADCore/R3.9-1.1.0
 
