--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -2,7 +2,8 @@
 # RELEASE_NOTES
 #
 R1.8.5	2022-06-01 Bruce Hill
-	Update to event2/R4.6.0
+	Backoff to pre timingApi code as those versions aren't locking.
+	Update to event2/R4.6.0, last event2 that works w/ timeStampFifo.
 
 R1.8.4	2022-02-09 Bruce Hill
 	Update to ADCore/R3.9-1.1.0
