--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,9 @@
 #
 # RELEASE_NOTES
 #
+R2.1.0 2023-02-23 Bruce Hill
+	Removed all need for event2 header files and macros.  Only timingFifoApi.h is needed.
+
 R2.0.2 2023-02-21 Bruce Hill
 	Update to ADCore/R3.10-1.1.0
 
